--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
 }
